--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,27 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+Build_Data/Managed/UnityEngine.dll.mdb
+Build_Data/Mono/etc/mono/1.0/DefaultWsdlHelpGenerator.aspx
+Build_Data/Mono/etc/mono/1.0/machine.config
+Build_Data/Mono/etc/mono/2.0/Browsers/Compat.browser
+Build_Data/Mono/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+Build_Data/Mono/etc/mono/2.0/machine.config
+Build_Data/Mono/etc/mono/2.0/settings.map
+Build_Data/Mono/etc/mono/2.0/web.config
+Build_Data/Mono/etc/mono/browscap.ini
+Build_Data/Mono/etc/mono/config
+Build_Data/Mono/etc/mono/mconfig/config.xml
+Build_Data/Resources/unity default resources
+Build_Data/Resources/unity_builtin_extra
+Build_Data/globalgamemanagers
+Build_Data/globalgamemanagers.assets
+Build_Data/level0
+Build_Data/level0.resS
+Build_Data/level1
+Build_Data/output_log.txt
+Build_Data/sharedassets0.assets
+Build_Data/sharedassets0.assets.resS
+Build_Data/sharedassets1.assets
+Build_Data/sharedassets1.assets.resS
+Assets/_Scenes/About.unity.meta
